src/objects/PIR_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <formula>IF(
  ISBLANK(Case__r.Owner:Queue.Id),
  Case__r.Owner:User.FirstName &amp; &quot; &quot; &amp; Case__r.Owner:User.LastName,
  Case__r.Owner:Queue.QueueName
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>PIR Details</relationshipLabel>
        <relationshipName>PIR_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Claim_Type__c</fullName>
        <label>Claim Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HCFA</fullName>
                </value>
                <value>
                    <fullName>NDC</fullName>
                </value>
                <value>
                    <fullName>UB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claims_Overturned__c</fullName>
        <label>Claims Overturned?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Overturned</fullName>
                </value>
                <value>
                    <fullName>Partially Overturned</fullName>
                </value>
                <value>
                    <fullName>Upheld</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cloned_From_Case_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cloned From Case Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closure_Sub_Status__c</fullName>
        <label>Closure Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created in Error</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Issue Resolved</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Re-directed</fullName>
                </value>
                <value>
                    <fullName>Resolution Partner to Close</fullName>
                </value>
                <value>
                    <fullName>Split</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Analysis__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Data Analysis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Time_Closed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date/Time Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Opened__c</fullName>
        <formula>Case__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date/Time Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Do_NOT_Call_for_Case_Resolution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do NOT Call for Case Resolution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E2E_Priority__c</fullName>
        <label>E2E Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Med</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exact_Count_Unknown_Multiple_Claims__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exact Count Unknown; Multiple Claims</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAST_Global_Eligible__c</fullName>
        <label>FAST Global Eligible</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FAST_Global_Worked__c</fullName>
        <label>Global Worked</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Reviewing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FAST_On_Shore_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>​​​​​​Please select the On-Shore User that is communicating with the Provider.</inlineHelpText>
        <label>FAST On-Shore Contact Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FAST_On_Shore_Contact_Name</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Formal_Complaint_Filed__c</fullName>
        <label>Formal Complaint Filed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Governance_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Governance Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Governance_Status__c</fullName>
        <label>Governance Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_Was_Provider_Contacted__c</fullName>
        <label>How Was Provider Contacted?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_no_why_not__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If no, why not?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ignore_Reopen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore Reopen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insight_Source_Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Insight Source Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insight_Source__c</fullName>
        <label>Insight Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ePALs</fullName>
                </value>
                <value>
                    <fullName>Post Call NPS/UES</fullName>
                </value>
                <value>
                    <fullName>Call Escalation Survey</fullName>
                </value>
                <value>
                    <fullName>FAST Survey</fullName>
                </value>
                <value>
                    <fullName>Mystery Shopper</fullName>
                </value>
                <value>
                    <fullName>Call Listening Forum</fullName>
                </value>
                <value>
                    <fullName>PAC Call Listening</fullName>
                </value>
                <value>
                    <fullName>PALs</fullName>
                </value>
                <value>
                    <fullName>Focus Groups</fullName>
                </value>
                <value>
                    <fullName>Issue Prevention</fullName>
                </value>
                <value>
                    <fullName>Issue Detection</fullName>
                </value>
                <value>
                    <fullName>SWAT</fullName>
                </value>
                <value>
                    <fullName>Internal Business Partner</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Bearing__c</fullName>
        <label>Interest Bearing?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_Category__c</fullName>
        <label>Issue Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts Receivable</fullName>
                </value>
                <value>
                    <fullName>Early Warning System</fullName>
                </value>
                <value>
                    <fullName>First Time Visit</fullName>
                </value>
                <value>
                    <fullName>National PR Team Only</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Rework</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_Detection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Issue Detection?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_Prevention__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Issue Prevention?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_Subcategory__c</fullName>
        <label>Issue Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Issue_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Additional Info Needed</fullName>
                </value>
                <value>
                    <fullName>Direct Intake from Provider</fullName>
                </value>
                <value>
                    <fullName>Known Service Issue</fullName>
                </value>
                <value>
                    <fullName>Reconsideration Failure</fullName>
                </value>
                <value>
                    <fullName>System Updated</fullName>
                </value>
                <value>
                    <fullName>Exhausted Delegate</fullName>
                </value>
                <value>
                    <fullName>External Rework</fullName>
                </value>
                <value>
                    <fullName>File Preparation</fullName>
                </value>
                <value>
                    <fullName>High Dollar</fullName>
                </value>
                <value>
                    <fullName>Internal Rework</fullName>
                </value>
                <value>
                    <fullName>Legal/DOI/Regulatory Affairs</fullName>
                </value>
                <value>
                    <fullName>Medicare Exhaust</fullName>
                </value>
                <value>
                    <fullName>Month End/Quarterly Escalations</fullName>
                </value>
                <value>
                    <fullName>Overpayment Recoupment</fullName>
                </value>
                <value>
                    <fullName>ppoOne NDC repricing</fullName>
                </value>
                <value>
                    <fullName>ppoOne Repricing (non NDC)</fullName>
                </value>
                <value>
                    <fullName>Purged</fullName>
                </value>
                <value>
                    <fullName>Research Complex Issue</fullName>
                </value>
                <value>
                    <fullName>Trend Identification Request</fullName>
                </value>
                <value>
                    <fullName>United as Secondary</fullName>
                </value>
                <value>
                    <fullName>Unpaid/Unprocessed</fullName>
                </value>
                <value>
                    <fullName>Balance Billing</fullName>
                </value>
                <value>
                    <fullName>CA/delegate</fullName>
                </value>
                <value>
                    <fullName>Contract/Demo Update</fullName>
                </value>
                <value>
                    <fullName>Coordination of Benefits</fullName>
                </value>
                <value>
                    <fullName>Inappropriate Referral to Mailbox</fullName>
                </value>
                <value>
                    <fullName>Member Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LA_C_S_Reason_for_Provider_Issue__c</fullName>
        <label>LA C&amp;S Reason for Provider Issue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Incorrect Claim Payment</fullName>
                </value>
                <value>
                    <fullName>Reimbursement Rates</fullName>
                </value>
                <value>
                    <fullName>Prior Authorization</fullName>
                </value>
                <value>
                    <fullName>Provider Enrollment / Provider Credentialing</fullName>
                </value>
                <value>
                    <fullName>Lack of Information / Response</fullName>
                </value>
                <value>
                    <fullName>Recoupment</fullName>
                </value>
                <value>
                    <fullName>Third Party Liability</fullName>
                </value>
                <value>
                    <fullName>Lower Level of Care</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LA_C_S_Summary_of_Provider_Issue__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LA C&amp;S Summary of Provider Issue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Community and State</fullName>
                </value>
                <value>
                    <fullName>Employer and Individual</fullName>
                </value>
                <value>
                    <fullName>Medicare and Retirement</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MBO_Check_List_Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MBO Check List Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBO_Check_List__c</fullName>
        <label>MBO Check List</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FCR</fullName>
                </value>
                <value>
                    <fullName>AHT</fullName>
                </value>
                <value>
                    <fullName>NPS/UES</fullName>
                </value>
                <value>
                    <fullName>Contact Rate</fullName>
                </value>
                <value>
                    <fullName>Transfer Rate</fullName>
                </value>
                <value>
                    <fullName>Rework</fullName>
                </value>
                <value>
                    <fullName>FPC Accuracy</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Measurement_System__c</fullName>
        <label>Measurement System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monitor_Only_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Monitor Only Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_Reference_Facilitated_Referral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Reference #; Facilitated Referral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Contract__c</fullName>
        <label>Non-Standard Contract</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Claims__c</fullName>
        <label>Number of Claims</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OGS_Sub_Status__c</fullName>
        <label>OGA Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Additional Information Needed</fullName>
                </value>
                <value>
                    <fullName>Additional Information Obtained</fullName>
                </value>
                <value>
                    <fullName>Pending closed</fullName>
                </value>
                <value>
                    <fullName>Second Review Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OIA_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OIA Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Date_Time_Closed__c</fullName>
        <formula>Case__r.ClosedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Date/Time Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Original_Reference_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Original Reference Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Date_for_Closed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Override Date for Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_External_Contact_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PMO_Contact__c</fullName>
        <description>Contact information of PMO Provider Relationship</description>
        <encryptionScheme>None</encryptionScheme>
        <label>PMO Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMO_Provider_Relationship__c</fullName>
        <description>It&apos;s relates the information to PMO Contact by selecting the options</description>
        <label>PMO Provider Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Par_Provider__c</fullName>
        <label>Par Provider</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Platform_System_Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Platform/System Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform_System__c</fullName>
        <label>Platform/System</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cirrus</fullName>
                </value>
                <value>
                    <fullName>COSMOS</fullName>
                </value>
                <value>
                    <fullName>CSP Facets</fullName>
                </value>
                <value>
                    <fullName>NICE</fullName>
                </value>
                <value>
                    <fullName>Pulse</fullName>
                </value>
                <value>
                    <fullName>RV Facets</fullName>
                </value>
                <value>
                    <fullName>TRICARE</fullName>
                </value>
                <value>
                    <fullName>UMR/Golden Rule/Third Party</fullName>
                </value>
                <value>
                    <fullName>UNET</fullName>
                </value>
                <value>
                    <fullName>ICUE</fullName>
                </value>
                <value>
                    <fullName>Iset</fullName>
                </value>
                <value>
                    <fullName>Spire</fullName>
                </value>
                <value>
                    <fullName>IVR</fullName>
                </value>
                <value>
                    <fullName>VCC</fullName>
                </value>
                <value>
                    <fullName>Genesys</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Line_of_Business__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cirrus</fullName>
                </value>
                <value>
                    <fullName>COSMOS</fullName>
                </value>
                <value>
                    <fullName>CSP Facets</fullName>
                </value>
                <value>
                    <fullName>NICE</fullName>
                </value>
                <value>
                    <fullName>Pulse</fullName>
                </value>
                <value>
                    <fullName>RV Facets</fullName>
                </value>
                <value>
                    <fullName>TRICARE</fullName>
                </value>
                <value>
                    <fullName>UMR/Golden Rule/Third Party</fullName>
                </value>
                <value>
                    <fullName>UNET</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AARP Supplement</fullName>
                </value>
                <value>
                    <fullName>Charter</fullName>
                </value>
                <value>
                    <fullName>CHIP</fullName>
                </value>
                <value>
                    <fullName>Choice/Choice Plus</fullName>
                </value>
                <value>
                    <fullName>CIP/XL Health</fullName>
                </value>
                <value>
                    <fullName>Compass</fullName>
                </value>
                <value>
                    <fullName>Core</fullName>
                </value>
                <value>
                    <fullName>CRS</fullName>
                </value>
                <value>
                    <fullName>DSNP</fullName>
                </value>
                <value>
                    <fullName>Dual Medicaid and Medicare</fullName>
                </value>
                <value>
                    <fullName>Empire</fullName>
                </value>
                <value>
                    <fullName>Golden Rule</fullName>
                </value>
                <value>
                    <fullName>HARF</fullName>
                </value>
                <value>
                    <fullName>Harvard Pilgrim</fullName>
                </value>
                <value>
                    <fullName>HCBS</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>LTC</fullName>
                </value>
                <value>
                    <fullName>MAHP</fullName>
                </value>
                <value>
                    <fullName>Medica</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Medicare Advantage</fullName>
                </value>
                <value>
                    <fullName>Medicare NPPO</fullName>
                </value>
                <value>
                    <fullName>Navigate</fullName>
                </value>
                <value>
                    <fullName>NHP</fullName>
                </value>
                <value>
                    <fullName>Oxford</fullName>
                </value>
                <value>
                    <fullName>PPO</fullName>
                </value>
                <value>
                    <fullName>Railroad</fullName>
                </value>
                <value>
                    <fullName>River Valley</fullName>
                </value>
                <value>
                    <fullName>Select/Select Plus</fullName>
                </value>
                <value>
                    <fullName>Sierra Health</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Program Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Progress_to_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Progress to Date</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Area_Focus_Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Project Area Focus Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Area_Focus__c</fullName>
        <label>Project Area Focus</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>FAST</fullName>
                </value>
                <value>
                    <fullName>Claims</fullName>
                </value>
                <value>
                    <fullName>Appeals</fullName>
                </value>
                <value>
                    <fullName>PDO</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Projected_Resolution_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Projected Resolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Provider_Contact_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Provider_Contact_Preference__c</fullName>
        <label>Provider Contact Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_Contact__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Experience_Data_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Provider Experience Data Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provider_Specialty__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Specialty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Type_Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Type Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Type__c</fullName>
        <label>Provider Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Solo Individual Practioner</fullName>
                </value>
                <value>
                    <fullName>Individual Practioner within Groups</fullName>
                </value>
                <value>
                    <fullName>Provider Groups</fullName>
                </value>
                <value>
                    <fullName>Facility/Ancillary</fullName>
                </value>
                <value>
                    <fullName>FQHC</fullName>
                </value>
                <value>
                    <fullName>HCBS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>